[sm] fixed content shift on menu opening

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,6 +8,15 @@ a:hover {
   color: gray;
 }
 
+body {
+    padding-top: 70px;
+}
+
+nav {
+    width: 100%;
+    position: absolute !important;
+}
+
 ul {
     list-style-type:none;
     padding: 0;
